Fixed bug in Firefox style that was cutting off top of URL dropdown bar

--- a/nix-config/home/files/userChrome.css
+++ b/nix-config/home/files/userChrome.css
@@ -83,7 +83,8 @@
 }
 
 #urlbar-container{
-   margin-bottom: 3px;
+   margin-top: 3px;
+   display: initial;
 }
 
 #urlbar-background {
@@ -409,7 +410,7 @@ toolbar:not([customizing]) > #nav-bar-customization-target {
 	min-width: var(--uc-sidebar-width) !important;
 	width: var(--uc-sidebar-width) !important;
 	max-width: var(--uc-sidebar-width) !important;
-	z-index: 100;
+  z-index:100;
 }
 
 #sidebar-box[positionend] {
